--- a/www/index.html
+++ b/www/index.html
@@ -24,9 +24,13 @@
 			//alert("init()-end");
 			window_height = $(window).height();
 		}
-		function alertDismissed_check_net(){
-			console.log("alertDismissed_check_net : loop :" + window.sessionStorage.getItem("do_loop"));
-			if(window.sessionStorage.getItem("do_loop")=="1")
+		function alertDismissed_check_net(buttonIndex){
+			//alert(buttonIndex);
+			if(buttonIndex==2 || buttonIndex==0)
+			{
+				navigator.app.exitApp();
+			}
+			else
 			{
 				window.sessionStorage.removeItem("do_loop");
 				check_net(true,true,true);
@@ -47,11 +51,11 @@
 					else
 						window.sessionStorage.setItem("do_loop","0");
 					
-					navigator.notification.alert(
-						'شما برای استفاده از خدمات این نرم افزار به اینترنت نیاز دارید!',  // message
+					navigator.notification.confirm(
+						'شما برای استفاده از خدمات این نرم افزار به اینترنت نیاز دارید\nشماره پشتیبانی: 02144592768',  // message
 						alertDismissed_check_net,         // callback
-						'توجه',            // title
-						'تائید'                  // buttonName
+						'توجه',            					// title
+						['بررسی مجدد','خروج از برنامه']			// buttonName
 					);
 				}
 				return false;
